Modal design improved

--- a/sidepanel.html
+++ b/sidepanel.html
@@ -82,7 +82,7 @@
             <h2>License Verification</h2>
 
             <div class="license-status" id="licenseStatus">
-              <div class="status-icon">🔒</div>
+              <div class="status-icon"></div>
               <div class="status-text">No license activated</div>
             </div>
 
