--- a/sidepanel.html
+++ b/sidepanel.html
@@ -17,7 +17,7 @@
           />
           OTP Box
         </h1>
-        <p class="subtitle">OTP Automation</p>
+        <p class="subtitle">OTP Automation System</p>
       </div>
 
       <!-- Tab Navigation -->
@@ -135,6 +135,14 @@
             </div>
           </div>
         </div>
+      </div>
+
+      <!-- Footer -->
+      <div class="footer">
+        <p class="footer-text">
+          © <span id="copyrightYear">2025</span> OTP Box. All rights reserved.
+        </p>
+        <p class="footer-version">Version <span id="appVersion">1.0.0</span></p>
       </div>
     </div>
 
