Name added to footer

--- a/sidepanel.html
+++ b/sidepanel.html
@@ -140,7 +140,13 @@
       <!-- Footer -->
       <div class="footer">
         <p class="footer-text">
-          © <span id="copyrightYear">2025</span> OTP Box. All rights reserved.
+          © <span id="copyrightYear">2025</span>
+          <a
+            href="https://rakibulhasan.dev/"
+            target="_blank"
+            rel="noopener noreferrer"
+            >Rakibul Hasan</a
+          >. All rights reserved.
         </p>
         <p class="footer-version">Version <span id="appVersion">1.0.0</span></p>
       </div>
