JS Obfuscator added

--- a/sidepanel.html
+++ b/sidepanel.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>OTP Box</title>
-    <link rel="stylesheet" href="sidepanel.css" />
+    <link rel="stylesheet" href="assets/css/sidepanel.css" />
   </head>
   <body>
     <div class="container">
       <div class="header">
         <h1>
           <img
-            src="icons/icon16.png"
+            src="assets/icons/icon16.png"
             alt="OTP Box"
             style="width: 24px; height: 24px; vertical-align: middle"
           />
@@ -173,6 +173,6 @@
       </div>
     </div>
 
-    <script src="sidepanel.js"></script>
+    <script src="assets/js/sidepanel.js"></script>
   </body>
 </html>
